2007-11-09  David Bateman  <dbateman@free.fr>

	* plot/patch.m: Correctly handle case of axis handle as first arg.

2007-11-08  John W. Eaton  <jwe@octave.org>

	* control/base/dcgain.m, control/base/dre.m,
	control/base/impulse.m, control/base/step.m,
	control/system/dmr2d.m, control/system/ord2.m,
	control/system/sys2ss.m, control/system/sysdimensions.m,
	control/system/sysgetsignals.m, control/system/sysout.m,
	control/system/tfout.m, control/system/ugain.m,
	control/system/zpout.m, control/util/strappend.m:
	Don't fail with usage message if nargout is too large.

	* control/hinf/h2syn.m, control/hinf/hinf_ctr.m,
	control/hinf/hinfnorm.m, control/hinf/hinfsyn.m,
	control/hinf/hinfsyn_chk.m, control/hinf/is_dgkf.m,
	control/hinf/wgt1o.m, control/obsolete/dezero.m,
	control/obsolete/dlqg.m, control/obsolete/minfo.m,
	control/obsolete/packsys.m, control/obsolete/qzval.m,
	control/obsolete/rotg.m, control/obsolete/series.m,
	control/obsolete/swapcols.m, control/obsolete/swaprows.m,
	control/obsolete/syschnames.m, control/obsolete/unpacksys.m,
	control/system/__syschnamesl__.m,
	control/system/__syscont_disc__.m,
	control/system/__sysdefioname__.m, control/system/__sysgroupn__.m,
	control/system/__tf2sysl__.m, control/system/__zp2ssg2__.m,
	control/system/abcddim.m, control/system/buildssic.m,
	control/system/c2d.m, control/system/cellidx.m,
	control/system/d2c.m, control/system/dmr2d.m,
	control/system/fir2sys.m, control/system/is_abcd.m,
	control/system/is_controllable.m, control/system/is_detectable.m,
	control/system/is_digital.m, control/system/is_observable.m,
	control/system/is_stabilizable.m, control/system/is_stable.m,
	control/system/jet707.m, control/system/listidx.m,
	control/system/parallel.m, control/system/ss.m,
	control/system/ss2sys.m, control/system/ss2zp.m,
	control/system/starp.m, control/system/sys2ss.m,
	control/system/sys2tf.m, control/system/sys2zp.m,
	control/system/sysadd.m, control/system/sysappend.m,