@@ -33,6 +33,10 @@ Octave is free software; you can redistribute it and/or modify it
 under the terms of the GNU General Public License as published by the
 Free Software Foundation.
 
+@strong{Note:} This file is automatically generated from
+@file{doc/interpreter/install.txi} in the Octave sources, so to make
+changes to this documenation file, change that source file.
+
 @node Installation
 @chapter Installing Octave
 @end ifset
@@ -465,5 +469,17 @@ problem by editing the file @file{config.h} to not define
 In any case, please report this as a bug since it might be possible to
 modify Octave's configuration script to automatically determine the
 proper thing to do.
+
+@item
+If Octave is unable to find a header file because it is installed in a
+location that is not normally searched by the compiler, you can add the
+directory to the include search path by specifying (for example)
+@code{CPPFLAGS=-I/some/nonstandard/directory} as an argument to
+@code{configure}.  Other variables that can be specified this way are
+@code{CFLAGS}, @code{CXXFLAGS}, @code{FFLAGS}, and @code{LDFLAGS}.
+Passing them as options to the configure script also records them in the
+@file{config.status} file.  By default, @code{CPPFLAGS} and
+@code{LDFLAGS} are empty, @code{CFLAGS} and @code{CXXFLAGS} are set to
+@code{"-g -O"} and @code{FFLAGS} is set to @code{"-O"}.
 
 @end itemize
