@@ -2,6 +2,10 @@
 
 	* graphics.cc (is_handle): Handle must be a real scalar.
 
+2007-11-09  Joseph P. Skudlarek  <Jskud@Jskud.com>
+
+	* data.cc (Fislogical): Fix typo in documentation entry.
+
 2007-11-08  John W. Eaton  <jwe@octave.org>
 
 	* DLD-FUNCTIONS/__gnuplot_raw__.l (F__gnuplot_save_data__):
